--- a/cinemax_movie_app/pubspec.yaml
+++ b/cinemax_movie_app/pubspec.yaml
@@ -65,6 +65,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/
+    - Assets/images/OnBoarding2.svg
+    - Assets/images/OnBoarding3.svg
+    - Assets/images/NextOnBoarding1.svg
+    - Assets/images/NextOnBoarding2.svg
+    - Assets/images/NextOnBoarding3.svg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
