--- a/cinemax_movie_app/pubspec.yaml
+++ b/cinemax_movie_app/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - Assets/images/NextOnBoarding1.svg
     - Assets/images/NextOnBoarding2.svg
     - Assets/images/NextOnBoarding3.svg
+    - Assets/images/onbarding/Onboarding1 Image.png
 
   #   - images/a_dot_ham.jpeg
 
