signup & login firebase

--- a/cinemax_movie_app/.vscode/settings.json
+++ b/cinemax_movie_app/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "autovalidate"
-    ]
+    ],
+    "cmake.sourceDirectory": "D:/mostaaballlaaaak/FlutterProjects/CINEMAX/cinemax_movie_app/windows/runner"
 }
