--- a/cinemax_movie_app/ios/firebase_app_id_file.json
+++ b/cinemax_movie_app/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:295418757661:ios:b114736a0880c1c6d9fcf4",
-  "FIREBASE_PROJECT_ID": "cinemax-movie-app",
-  "GCM_SENDER_ID": "295418757661"
+  "GOOGLE_APP_ID": "1:1063586552091:ios:f4de601af6cd1e2d54dbbe",
+  "FIREBASE_PROJECT_ID": "movie-app-c668d",
+  "GCM_SENDER_ID": "1063586552091"
 }
