--- a/cinemax_movie_app/pubspec.yaml
+++ b/cinemax_movie_app/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
   animated_splash_screen: ^1.3.0
   cupertino_icons: ^1.0.2
   flutter:
@@ -60,12 +62,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/
-    - Assets/images/OnBoarding2.svg
-    - Assets/images/OnBoarding3.svg
+    - Assets/images/onbarding/Onboarding1 Image.png
     - Assets/images/NextOnBoarding1.svg
     - Assets/images/NextOnBoarding2.svg
     - Assets/images/NextOnBoarding3.svg
-    - Assets/images/onbarding/Onboarding1 Image.png
+    - Assets/images/OnBoarding2.png
+    - Assets/images/OnBoarding3.png
+    - Assets/images/Logo.svg
+    - Assets/images/Google.png
+    - Assets/images/Apple.png
+    - Assets/images/Facebook.png
 
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
