--- a/cinemax_movie_app/pubspec.yaml
+++ b/cinemax_movie_app/pubspec.yaml
@@ -34,16 +34,24 @@ dependencies:
   firebase_core: ^2.15.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  flutter_facebook_auth: 5.0.11
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.0.0
   google_fonts: 4.0.4
   google_nav_bar: ^5.0.6
   google_sign_in: ^6.1.5
-
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  http: ^0.13.6
+  persistent_bottom_nav_bar: ^5.0.2
+  youtube_player_flutter: ^8.1.2
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,6 +87,9 @@ flutter:
     - Assets/images/TelegramIcon.png
     - Assets/images/PaymentAlert.png
     - Assets/images/UpcomingMovies.png
+    - Assets/images/Question.png
+    - Assets/images/Patern.svg
+    - Assets/images/Features.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
